--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -53,11 +53,11 @@ assetic:
 doctrine:
     dbal:
         driver:   pdo_mysql
-        host:     "%database_host%"
+        host:     localhost
         port:     "%database_port%"
-        dbname:   "%database_name%"
-        user:     "%database_user%"
-        password: "%database_password%"
+        dbname:   PlanYourEvent
+        user:     PlanYourEvent
+        password: y5zCF8xdScSEJs5x
         charset:  UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
